src/objects/CMSFolder__c.object
<CustomObject>
    <description>CMSForce Folders. Used to categorize Pages, PageTemplates and Web Forms</description>
    <fields>
        <fullName>Parent_CMSFolder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this folder is a subfolder, please select it&apos;s parent here.</inlineHelpText>
        <label>Parent CMSFolder</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Type__c</field>
                <operation>equals</operation>
                <valueField>CMSFolder__c.Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMSFolder__c</referenceTo>
        <relationshipLabel>Subfolders</relationshipLabel>
        <relationshipName>CMSFolder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <description>The Site that this folder belongs to.</description>
        <label>Site Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Page</fullName>
                </value>
                <value>
                    <fullName>PageTemplate</fullName>
                </value>
                <value>
                    <fullName>WebForm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Folder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_CMSFolder__c</columns>
        <columns>Type__c</columns>
        <columns>Site_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CMSFolder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMSForce_Site_Id_req_Root_folder</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
ISBLANK(Parent_CMSFolder__c),ISBLANK( Site_Id__c ),
 TEXT(Type__c)  = &apos;Page&apos;
)
, true,false)</errorConditionFormula>
        <errorMessage>Page root folders need to be attached to a Site.</errorMessage>
    </validationRules>
</CustomObject>